
5.1.0 -> 5.2a0:
    - jbj: gzdio: disable rsync flushing until a fix can be attempted.
    - jbj: gzdio: remove c99'ism.
    - proyvind: disable filetriggers for src.rpms.
    - jbj: band-aid test for tag->tagno != NULL for now. better needs doing.
    - jbj: fix: --changelog segfault from rpmpopt.in typo.
    - rse: fallback to xmalloc+strncpy if strndup is not available in filetriggers code
    - proyvind: adapt filetriggers to use miRE in stead of regex(3).
    - proyvind: merge pixel's filetriggers support.
    - rse: configure: do not complain with "python: file not found" on platforms without python(1) in PATH
    - rpm.org: use "Mono/.Net assembly" for mono magic.
    - jbj: rpmdav: OPTIONS on every new dir needs thought. per-session for now.
    - jbj: rpmdav: on 302, append the trailing '/' and retry. wotta pita.
    - jbj: rpmdav: grab Location: and ETag: if available.
    - jbj: rpmhtml: convert %2A et al in href's while parsing.
    - jbj: rpmwget: wire up --output-file/--append-output options.
    - jbj: rpmdav: add html parser to extract plain http href's.
    - at: gzdio: return partial "best effort" bytes written with gzfoo errors.
    - at: gzdio: do gzflush only after RSYNC_WIN boundaries.
    - at: gzdio: push gzFile into a private container.
    - jbj: rpmio: mark "server awol" disconnected state for graceful error
	handling.
    - jbj: rpmrepo: avoid double'd error message.
    - jbj: rpmrepo: terminate immediately, rather than "best-effort" continue,
	on I/O error.
    - jbj: rpmrepo: terminate on short read, don't bother with extra EOF read.
    - jbj: rpmwget: turn on --limit-rate. overdamped afaict, todo++ ...
    - jbj: rpmwget: move most of the calculations into the notify callback.
    - jbj: rpmurl: add send/recv/total accumulators.
    - jbj: add --whatneeds/--needswhat popt aliases.
    - jbj: make gzdio.c standalone.
    - rpm.org: Make verifyAttrs and virtualFileAttributes static.
    - rpm.org: Teach Fflush about lzdio.